[package]
name = "async-attributes"
description = "Experimental language-level polyfills for Async Rust."
version = "1.1.1"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/async-rs/async-attributes"
homepage = "https://github.com/async-rs/async-attributes"
documentation = "https://docs.rs/async-attributes"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
keywords = ["async", "await", "macro", "futures"]
categories = ["asynchronous", "network-programming", "filesystem", "concurrency", "api-bindings"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.48", features = ["full"] }
quote = "1.0.7"

[dev-dependencies]
async-spawner = "1.0.0"
async-std = "1.7.0"
